@@ -9,8 +9,6 @@ import de.taimos.totp.TOTP;
 import org.apache.commons.codec.binary.Base32;
 import org.apache.commons.codec.binary.Hex;
 import org.apache.tomcat.util.codec.binary.Base64;
-import org.apache.tomcat.util.http.fileupload.FileUtils;
-import org.springframework.core.io.ClassPathResource;
 
 import java.io.*;
 import java.net.URLEncoder;
@@ -19,16 +17,16 @@ import java.nio.file.Files;
 import java.security.SecureRandom;
 import java.util.stream.Collectors;
 
-public class multiFactor {
+public class MultiFactor {
+
+    private MultiFactor() {
+    }
+
     public static String getGoogleAuthenticatorBarCode(String secretKey, String account, String issuer) {
-        try {
-            return "otpauth://totp/"
-                    + URLEncoder.encode(issuer + ":" + account, "UTF-8").replace("+", "%20")
-                    + "?secret=" + URLEncoder.encode(secretKey, "UTF-8").replace("+", "%20")
-                    + "&issuer=" + URLEncoder.encode(issuer, "UTF-8").replace("+", "%20");
-        } catch (UnsupportedEncodingException e) {
-            throw new IllegalStateException(e);
-        }
+        return "otpauth://totp/"
+                + URLEncoder.encode(issuer + ":" + account, StandardCharsets.UTF_8).replace("+", "%20")
+                + "?secret=" + URLEncoder.encode(secretKey, StandardCharsets.UTF_8).replace("+", "%20")
+                + "&issuer=" + URLEncoder.encode(issuer, StandardCharsets.UTF_8).replace("+", "%20");
     }
 
     public static String createQRCode(String barCodeData, int height, int width)
@@ -53,6 +51,7 @@ public class multiFactor {
         Base32 base32 = new Base32();
         return base32.encodeToString(bytes);
     }
+
     public static String getTOTPCode(String secretKey) {
         Base32 base32 = new Base32();
         byte[] bytes = base32.decode(secretKey);
@@ -60,30 +59,30 @@ public class multiFactor {
         return TOTP.getOTP(hexKey);
     }
 
-    public static String getMfaQRCode(String secretKey, String Email){
+    public static String getMfaQRCode(String secretKey, String Email) {
         String barCodeData = getGoogleAuthenticatorBarCode(secretKey, Email, "Vault");
         int height = 350;
         int width = 350;
         try {
             return createQRCode(barCodeData, height, width);
-        } catch (WriterException e) {
-            e.printStackTrace();
-        } catch (IOException e) {
+        } catch (WriterException | IOException e) {
             e.printStackTrace();
         }
         return barCodeData;
     }
+
     public static String getResourceFileAsString(String fileName) {
         InputStream is = getResourceFileAsInputStream(fileName);
         if (is != null) {
             BufferedReader reader = new BufferedReader(new InputStreamReader(is));
-            return (String)reader.lines().collect(Collectors.joining(System.lineSeparator()));
+            return (String) reader.lines().collect(Collectors.joining(System.lineSeparator()));
         } else {
             throw new RuntimeException("resource not found");
         }
     }
+
     public static InputStream getResourceFileAsInputStream(String fileName) {
-        ClassLoader classLoader = multiFactor.class.getClassLoader();
+        ClassLoader classLoader = MultiFactor.class.getClassLoader();
         return classLoader.getResourceAsStream(fileName);
     }
 }
